# CMakeList.txt: projekt CMake dla elementu ogiwara, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

project ("ogiwara")

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (ogiwara "ogiwara.cpp" )

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
